--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,12 +36,21 @@ h2 {
   color: #fff;
 }
 
+h2 {
+  color: #fff;
+}
+
 .carousel img {
   height: 300px;
   padding: 30px;
   margin: 40px;
   border-radius: 50%;
 }
+
 .carousel a {
   margin: 0 auto;
+}
+
+button {
+  padding: 2px 10px;
 }
